# quantlab

./: .gitignore  AKShare_DATA_GUIDE.md  ARCHITECTURE.md  README.md  WINDOWS-README.md  agents.md  check-env.bat  install-deps.bat  pyproject.toml  start-quick.bat  start.bat  start_app.bat  test_p2_runlog.py  test_p2_runlog_minimal.py
config/: backtest.yaml  calendars.yaml  data_sources.yaml  fees.yaml  universe.yaml
configs/: example_run.yaml
data/: assets.yaml  data_version.json
data/manifest/: etf.json
data/market/: metadata.parquet
data/portfolio/: portfolios.parquet  targets.parquet
data/universe/: aliases.parquet  instruments.parquet  listings.parquet
db/: schema.sql
docs/: ui_current_state_and_reuse.md
examples/: README.md  akshare_demo.py  akshare_workflow.py  capacity_test.py  compare_rebalance_freq.py  market_demo_query.py  market_demo_seed.py  p1_validation_suite.py  portfolio_analytics_demo.py  portfolio_m2_demo.py  portfolio_m3_demo.py  reconcile_demo.py  risk_constraints_demo.py  run_ashare_backtest.py  run_simple_backtest.py  test_p1_partial_fills.py  test_p1p5_capacity_sensitivity.py  test_p1p5_minimal.py  test_p2p4_data_integrity.py  universe_demo.py
runs_test/20260228_174801__test_strategy__9e1d5f/: config.yaml
runs_test/20260228_174801__test_strategy__9e1d5f/results/: metrics.json
scripts/: build_data_version.py  curate_data.py  lint_changed.py  smoke_test_sina.py  update_data.py
src/quantlab/: __init__.py  assets.py  cli.py  cli_sweep.py  rebalance.py
src/quantlab/analytics/: __init__.py  metrics.py  portfolio_analytics.py
src/quantlab/backtest/: __init__.py  broker_sim.py  engine.py  metrics.py
src/quantlab/cli/: __init__.py  run.py
src/quantlab/core/: __init__.py  registry.py  runlog.py  time.py  types.py
src/quantlab/data/: __init__.py  curate.py  ingest.py  manifest.py  schema.py  transforms.py  update_all.py
src/quantlab/db/: __init__.py  persist.py
src/quantlab/execution/: __init__.py  broker_base.py  broker_mock.py  constraints.py  router.py
src/quantlab/market/: __init__.py  (+4 more)
tests/: test_cli_grid.py  test_cli_smoke.py  test_portfolio_analytics.py  test_update_all_stream.py
ui/: README.md  app.py  bootstrap.py  i18n.py  i18n_zh.py  style.py
ui/actions/: run_backtest.py
ui/components/: __init__.py  common.py  dashboard.py  symbol_search_pro.py
ui/data/: __init__.py  loader.py
ui/pages/: 1_runs.py  2_run_detail.py  3_chart_demo.py  3_compare_runs.py  4_portfolio_builder.py  6_portfolio_analytics.py
(+34 files in other folders)
